--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -15,7 +15,7 @@ jobs:
           restore-keys: ${{ runner.os }}-r-${{ matrix.config.r }}-3-
       - name: Run Script
         run: |-
-          Rscript -e "install.packages(c('renv','pacman', 'devtools'))"
+          Rscript -e "install.packages(c('renv','pacman','devtools','raster'))"
           Rscript -e "devtools::install_github('tylermorganwall/rayvertex')"
           Rscript -e '#renv::consent(provided = TRUE)'
           Rscript -e "#renv::restore()"
