--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -26,4 +26,4 @@ jobs:
           git config --local user.name "ries9112"
           git add .
           git commit -m "Update GitHub readme" -a
-          git push https://ries9112:${{secrets.GITHUB_TOKEN}}@github.com/ries9112/NFTs-hicetnunc.git HEAD:master --force
+          git push https://ries9112:${{secrets.GIT_KEY}}@github.com/ries9112/rayvertex_automation.git HEAD:master --force
