--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -15,10 +15,10 @@ jobs:
           restore-keys: ${{ runner.os }}-r-${{ matrix.config.r }}-3-
       - name: Run Script
         run: |-
-          Rscript -e "install.packages(c('renv','pacman','devtools','raster'))"
-          Rscript -e "devtools::install_github('tylermorganwall/rayvertex')"
-          Rscript -e '#renv::consent(provided = TRUE)'
-          Rscript -e "#renv::restore()"
+          Rscript -e "#install.packages(c('renv','pacman','devtools','raster'))"
+          Rscript -e "#devtools::install_github('tylermorganwall/rayvertex')"
+          Rscript -e 'renv::consent(provided = TRUE)'
+          Rscript -e "renv::restore()"
           Rscript -e "source('script.R')"
       - name: Commit and push files
         run: |
@@ -26,4 +26,4 @@ jobs:
           git config --local user.name "ries9112"
           git add .
           git commit -m "Update GitHub readme" -a
-          git push https://ries9112:${{secrets.GIT_KEY}}@github.com/ries9112/rayvertex_automation.git HEAD:master --force
+          git push https://ries9112:${{secrets.GIT_KEY}}@github.com/ries9112/rayvertex_automation.git HEAD:main --force
